fix：多语言文案更新

--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/cs.lproj/Localizable.strings
@@ -690,7 +690,7 @@
 "AA0695" = "Přihlášení jedním kliknutím";
 "AA0696" = "Jiné přihlášení/registrace účtu";
 "AA0697" = "Aktuální verze nepodporuje přímé propojení tohoto zařízení. Stáhněte si aplikaci \"AI LIFE\" pro přidání a použití.";
-"AA0698" = "1.Sila imbas kod QR pada peranti atau dikongsi oleh orang lain\n2.Pergi ke laman web rasmi DophiGo > Sokongan > Muat turun untuk mendapatkan\nAlat PC Little Dolphin untuk log masuk dan penggunaan kod QR";
+"AA0698" = "1.Naskenujte QR kód na zařízení nebo sdílený ostatními\n2.Navštivte oficiální web DophiGo > Podpora > Stáhnout a získejte\nnástroj Little Dolphin PC pro přihlášení a použití pomocí QR kódu";
 "AA0699" = "Potvrdit";
 "AA0700" = "Přihlášení PC";
 "AA0701" = "Zrušit";
