--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/es.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/es.lproj/Localizable.strings
@@ -687,7 +687,7 @@
 "AA0695" = "Inicio de sesión con un clic";
 "AA0696" = "Iniciar sesión con otra cuenta / registrarse";
 "AA0697" = "La versión actual no admite la vinculación directa de este dispositivo. Por favor, descargue la aplicación \"AI LIFE\" para agregarlo y usarlo.";
-"AA0698" = "1.デバイス上のQRコードまたは他の人が共有したQRコードをスキャンしてください\n2.DophiGo公式サイト > サポート > ダウンロードにアクセスして\nQRコードログインと使用のためのLittle Dolphin PCツールを入手してください";
+"AA0698" = "1.Escanee el código QR en el dispositivo o compartido por otros\n2.Vaya al sitio web oficial de DophiGo > Soporte > Descargas para obtener\nla herramienta Little Dolphin PC para inicio de sesión y uso con código QR";
 "AA0699" = "Confirmar";
 "AA0700" = "Inicio PC";
 "AA0701" = "Cancelar";
