--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/id.lproj/Localizable.strings
@@ -690,7 +690,7 @@
 "AA0695" = "Tekan untuk masuk";
 "AA0696" = "Masuk dengan akun lain / Daftar";
 "AA0697" = "Versi saat ini tidak mendukung pengikatan langsung perangkat ini. Silakan unduh aplikasi \"AI LIFE\" untuk menambahkan dan menggunakannya.";
-"AA0698" = "1.Lütfen cihazdaki veya başkaları tarafından paylaşılan QR kodunu tarayın\n2.DophiGo resmi web sitesine > Destek > İndir bölümüne giderek\nQR kod girişi ve kullanımı için Little Dolphin PC aracını edinin";
+"AA0698" = "1.Silakan pindai kode QR di perangkat atau dibagikan oleh orang lain\n2.Kunjungi situs web resmi DophiGo > Dukungan > Unduh untuk mendapatkan\nalat PC Little Dolphin untuk login dan penggunaan kode QR";
 "AA0699" = "Konfirmasi";
 "AA0700" = "Login PC";
 "AA0701" = "Batal";
