--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ko.lproj/Localizable.strings
@@ -690,7 +690,7 @@
 "AA0695" = "원클릭 로그인";
 "AA0696" = "계정과 비밀번호로 로그인/회원가입";
 "AA0697" = "현재 버전에서는 이 장치를 직접 바인딩할 수 없습니다. \"AI LIFE\" 앱을 다운로드하여 추가하고 사용하십시오.";
-"AA0698" = "1.Bitte scannen Sie den QR-Code auf dem Gerät oder von anderen geteilten\n2.Besuchen Sie die offizielle DophiGo-Website > Support > Download, um das\nLittle Dolphin PC-Tool für QR-Code-Login und Nutzung zu erhalten";
+"AA0698" = "1.기기 또는 다른 사람이 공유한 QR 코드를 스캔하세요\n2.DophiGo 공식 웹사이트 > Support > Download에서\nQR 코드 로그인 및 사용을 위한 Little Dolphin PC 도구를 다운로드하세요";
 "AA0699" = "확인";
 "AA0700" = "PC 로그인";
 "AA0701" = "취소";
