--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pl.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pl.lproj/Localizable.strings
@@ -687,7 +687,7 @@
 "AA0695" = "Logowanie jednym kliknięciem";
 "AA0696" = "Inne logowanie/rejestracja konta";
 "AA0697" = "Obecna wersja nie obsługuje bezpośredniego wiązania tego urządzenia. Pobierz aplikację \"AI LIFE\", aby dodać i używać.";
-"AA0698" = "1.Escanee el código QR en el dispositivo o compartido por otros\n2.Vaya al sitio web oficial de DophiGo > Soporte > Descargas para obtener\nla herramienta Little Dolphin PC para inicio de sesión y uso con código QR";
+"AA0698" = "1.Zeskanuj kod QR na urządzeniu lub udostępniony przez innych\n2.OdwiEDŹ oficjalną stronę DophiGo > Wsparcie > Pobierz, aby uzyskać\nnarzędzie Little Dolphin PC do logowania i użytkowania za pomocą kodu QR";
 "AA0699" = "Potwierdź";
 "AA0700" = "Logowanie PC";
 "AA0701" = "Anuluj";
