--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pt.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/pt.lproj/Localizable.strings
@@ -687,7 +687,7 @@
 "AA0695" = "Login com um clique";
 "AA0696" = "Login/registro de outras contas";
 "AA0697" = "A versão atual não suporta a vinculação direta deste dispositivo. Por favor, baixe o aplicativo \"AI LIFE\" para adicionar e usá-lo.";
-"AA0698" = "1.Veuillez scanner le code QR sur l'appareil ou partagé par d'autres\n2.Allez sur le site officiel de DophiGo > Support > Télécharger pour obtenir\nl'outil PC Little Dolphin pour la connexion et l'utilisation par QR code";
+"AA0698" = "1. Escaneie o código QR exibido no dispositivo ou compartilhado por outra pessoa\n2. Acesse o site oficial da DophiGo > Suporte > Downloads e baixe a ferramenta Little Dolphin para PC. Com ela, você pode fazer login escaneando um código QR.";
 "AA0699" = "Confirmar";
 "AA0700" = "Login no PC";
 "AA0701" = "Cancelar";
