--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/sk.lproj/Localizable.strings
@@ -690,7 +690,7 @@
 "AA0695" = "Prihlásenie jedným kliknutím";
 "AA0696" = "Prihlásenie/registrácia iného účtu";
 "AA0697" = "Aktuálna verzia nepodporuje priame prepojenie tohto zariadenia. Stiahnite si aplikáciu \"AI LIFE\" na pridanie a používanie.";
-"AA0698" = "1.Naskenujte QR kód na zařízení nebo sdílený ostatními\n2.Navštivte oficiální web DophiGo > Podpora > Stáhnout a získejte\nnástroj Little Dolphin PC pro přihlášení a použití pomocí QR kódu";
+"AA0698" = "1.Naskenujte QR kód na zariadení alebo zdieľaný inými\n2.Navštívte oficiálne stránky DophiGo > Podpora > Stiahnuť a získajte\nnástroj Little Dolphin PC na prihlásenie a používanie pomocou QR kódu";
 "AA0699" = "Potvrdiť";
 "AA0700" = "Prihlásenie PC";
 "AA0701" = "Zrušiť";
