--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/en.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/en.lproj/Localizable.strings
@@ -690,7 +690,7 @@
 "AA0695" = "Phone Login";
 "AA0696" = "Login/register with another account";
 "AA0697" = "The current version does not support direct binding of this device. Please download the \"AI LIFE\" app to add and use it.";
-"AA0698" = "1.請掃描設備上的二維碼或他人分享的二維碼\n2.請前往DophiGo官網 > Support> Download，下載\n小豚當家PC端工具，可掃描二維碼登錄並使用";
+"AA0698" = "1. Please scan the QR code on the device or the one shared by others\n2. Go to the DophiGo official website > Support > Download to get the\nXiaotun PC Client for QR code login and usage";
 "AA0699" = "Confirm";
 "AA0700" = "PC Login";
 "AA0701" = "Cancel";
