--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/it.lproj/Localizable.strings
@@ -687,7 +687,7 @@
 "AA0695" = "Accesso con un clic";
 "AA0696" = "login/registrazione di un altro account";
 "AA0697" = "La versione corrente non supporta il collegamento diretto di questo dispositivo. Scarica l'app \"AI LIFE\" per aggiungerlo e utilizzarlo.";
-"AA0698" = "1. Escaneie o código QR exibido no dispositivo ou compartilhado por outra pessoa\n2. Acesse o site oficial da DophiGo > Suporte > Downloads e baixe a ferramenta Little Dolphin para PC. Com ela, você pode fazer login escaneando um código QR.";
+"AA0698" = "1.Scan il codice QR sul dispositivo o condiviso da altri\n2.Vai sul sito ufficiale di DophiGo > Supporto > Download per ottenere\nlo strumento PC Little Dolphin per l'accesso e l'uso con codice QR";
 "AA0699" = "Conferma";
 "AA0700" = "Accesso PC";
 "AA0701" = "Annulla";
