--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/nl.lproj/Localizable.strings
@@ -687,7 +687,7 @@
 "AA0695" = "Inloggen met één klik";
 "AA0696" = "Andere account login/registratie";
 "AA0697" = "De huidige versie ondersteunt geen directe binding van dit apparaat. Download de \"AI LIFE\"-app om toe te voegen en te gebruiken.";
-"AA0698" = "1.Silakan pindai kode QR di perangkat atau dibagikan oleh orang lain\n2.Kunjungi situs web resmi DophiGo > Dukungan > Unduh untuk mendapatkan\nalat PC Little Dolphin untuk login dan penggunaan kode QR";
+"AA0698" = "1.Scan de QR-code op het apparaat of gedeeld door anderen\n2.Ga naar de officiële DophiGo-website > Ondersteuning > Download om de\nLittle Dolphin PC-tool voor QR-code-inloggen en gebruik te krijgen";
 "AA0699" = "Bevestigen";
 "AA0700" = "PC-inlog";
 "AA0701" = "Annuleren";
