--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/ru.lproj/Localizable.strings
@@ -688,7 +688,7 @@
 "AA0695" = "Войти";
 "AA0696" = "Войти / создать другой аккаунт";
 "AA0697" = "Текущая версия не поддерживает прямое подключение этого устройства. Пожалуйста, загрузите приложение \"AI LIFE\", чтобы добавить и использовать его.";
-"AA0698" = "1.กรุณาสแกน QR Code บนอุปกรณ์หรือที่แชร์โดยผู้อื่น\n2.ไปที่เว็บไซต์ทางการของ DophiGo > Support > Download เพื่อรับ\nเครื่องมือ PC Little Dolphin สำหรับการเข้าสู่ระบบและการใช้งานด้วย QR Code";
+"AA0698" = "1.Пожалуйста, отсканируйте QR-код на устройстве или предоставленный другими\n2.Перейдите на официальный сайт DophiGo > Поддержка > Загрузки, чтобы получить\nинструмент Little Dolphin PC для входа и использования с QR-кодом";
 "AA0699" = "Подтвердить";
 "AA0700" = "Вход на ПК";
 "AA0701" = "Отмена";
