--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/th.lproj/Localizable.strings
@@ -690,7 +690,7 @@
 "AA0695" = "เข้าสู่ระบบด้วยคลิกเดียว";
 "AA0696" = "บัญชีอื่นๆ เข้าสู่ระบบ";
 "AA0697" = "เวอร์ชันปัจจุบันไม่รองรับการผูกอุปกรณ์นี้โดยตรง โปรดดาวน์โหลดแอป \"AI LIFE\" เพื่อเพิ่มและใช้งาน";
-"AA0698" = "1.Vui lòng quét mã QR trên thiết bị hoặc được chia sẻ bởi người khác\n2.Truy cập trang web chính thức của DophiGo > Hỗ trợ > Tải xuống để nhận\ncông cụ PC Little Dolphin để đăng nhập và sử dụng bằng mã QR";
+"AA0698" = "1.กรุณาสแกน QR Code บนอุปกรณ์หรือที่แชร์โดยผู้อื่น\n2.ไปที่เว็บไซต์ทางการของ DophiGo > Support > Download เพื่อรับ\nเครื่องมือ PC Little Dolphin สำหรับการเข้าสู่ระบบและการใช้งานด้วย QR Code";
 "AA0699" = "ยืนยัน";
 "AA0700" = "เข้าสู่ระบบ PC";
 "AA0701" = "ยกเลิก";
