--- a/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
+++ b/ios/demo/GWIoTAPIDemo/Supporting Files/Localizable/vi.lproj/Localizable.strings
@@ -690,7 +690,7 @@
 "AA0695" = "Đăng nhập nhanh";
 "AA0696" = "Đăng nhập bằng tài khoản khác/đăng ký";
 "AA0697" = "Phiên bản hiện tại không hỗ trợ liên kết trực tiếp thiết bị này. Vui lòng tải ứng dụng \"AI LIFE\" để thêm và sử dụng.";
-"AA0698" = "1.Scan il codice QR sul dispositivo o condiviso da altri\n2.Vai sul sito ufficiale di DophiGo > Supporto > Download per ottenere\nlo strumento PC Little Dolphin per l'accesso e l'uso con codice QR";
+"AA0698" = "1.Vui lòng quét mã QR trên thiết bị hoặc được chia sẻ bởi người khác\n2.Truy cập trang web chính thức của DophiGo > Hỗ trợ > Tải xuống để nhận\ncông cụ PC Little Dolphin để đăng nhập và sử dụng bằng mã QR";
 "AA0699" = "Xác nhận";
 "AA0700" = "Đăng nhập PC";
 "AA0701" = "Hủy";
